force-app/main/default/objects/Integration_Transactions_Log__c/Integration_Transactions_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Transactions Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Transactions Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>