force-app/main/default/objects/Integration_Transactions_Log__c/fields/ParentID__c.field-meta.xml
<CustomField>
    <fullName>ParentID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integration Transactions Logs</relationshipLabel>
    <relationshipName>Integration_Transactions_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>