force-app/main/default/objects/Integration_Transactions_Log__c/fields/Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Payload_JSON__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payload JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>