force-app/main/default/objects/Integration_Transactions_Log__c/fields/Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>