force-app/main/default/objects/Integration_Transactions_Log__c/fields/Transaction_Message__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>