force-app/main/default/objects/Integration_Transactions_Log__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>