force-app/main/default/objects/Integration_Transactions_Log__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>